// Vitest Snapshot v1

exports[`Page Process > pageMap en-US 1`] = `
[
  [
    {
      "kind": "MdxPage",
      "name": "404",
      "route": "/404",
    },
    {
      "kind": "MdxPage",
      "name": "500",
      "route": "/500",
    },
    {
      "data": {
        "404": {
          "theme": {
            "timestamp": false,
            "typesetting": "article",
          },
          "type": "page",
        },
        "500": {
          "theme": {
            "timestamp": false,
            "typesetting": "article",
          },
          "type": "page",
        },
        "about": {
          "items": {
            "a-page": {
              "title": "A Page",
            },
            "acknowledgement": {
              "title": "Acknowledgement",
            },
            "changelog": {
              "title": "Changelog",
            },
            "contributors": {
              "href": "https://github.com/vercel/swr/graphs/contributors",
              "newWindow": true,
              "title": "Contributors",
            },
            "team": {
              "title": "Team",
            },
          },
          "title": "About",
          "type": "menu",
        },
        "blog": {
          "theme": {
            "breadcrumb": false,
            "footer": true,
            "sidebar": false,
            "toc": true,
            "typesetting": "article",
          },
          "title": "Blog",
          "type": "page",
        },
        "docs": {
          "title": "Docs",
          "type": "page",
        },
        "examples": {
          "theme": {
            "layout": "full",
          },
          "title": "Examples",
          "type": "page",
        },
        "index": {
          "display": "hidden",
          "title": "Introduction",
          "type": "page",
        },
        "nextra_link": {
          "href": "https://github.com/shuding/nextra",
          "newWindow": true,
          "title": "Nextra ↗",
          "type": "page",
        },
        "remote": {
          "href": "/remote/4423220",
          "title": "Remote",
          "type": "page",
        },
        "test": "Test",
      },
      "kind": "Meta",
      "locale": "en-US",
    },
    {
      "children": [
        {
          "data": {
            "a-page": {
              "display": "hidden",
              "theme": {
                "layout": "raw",
              },
              "title": "A Page",
              "type": "page",
            },
            "acknowledgement": "🧩 Acknowledgement",
            "changelog": "Changelog",
            "team": "👥 Team",
          },
          "kind": "Meta",
          "locale": "en-US",
        },
        {
          "kind": "MdxPage",
          "locale": "en-US",
          "name": "a-page",
          "route": "/about/a-page",
        },
        {
          "kind": "MdxPage",
          "locale": "en-US",
          "name": "acknowledgement",
          "route": "/about/acknowledgement",
        },
        {
          "kind": "MdxPage",
          "locale": "en-US",
          "name": "changelog",
          "route": "/about/changelog",
        },
        {
          "kind": "MdxPage",
          "locale": "en-US",
          "name": "team",
          "route": "/about/team",
        },
      ],
      "kind": "Folder",
      "name": "about",
      "route": "/about",
    },
    {
      "children": [
        {
          "data": {
            "swr-v1": {
              "theme": {
                "breadcrumb": true,
              },
              "title": "Announcing SWR 1.0",
            },
          },
          "kind": "Meta",
          "locale": "en-US",
        },
        {
          "frontMatter": {
            "description": "Almost 2 years ago we open sourced SWR, the tiny data-fetching React library that people love. Today we are reaching another milestone: the 1.0 version of SWR.",
            "image": "https://assets.vercel.com/image/upload/v1630059453/swr/v1.png",
          },
          "kind": "MdxPage",
          "locale": "en-US",
          "name": "swr-v1",
          "route": "/blog/swr-v1",
        },
      ],
      "kind": "Folder",
      "name": "blog",
      "route": "/blog",
    },
    {
      "frontMatter": {
        "searchable": false,
      },
      "kind": "MdxPage",
      "locale": "en-US",
      "name": "blog",
      "route": "/blog",
    },
    {
      "children": [
        {
          "kind": "MdxPage",
          "locale": "en-US",
          "name": "404-500",
          "route": "/docs/404-500",
        },
        {
          "data": {
            "--- hey": {
              "title": "Getting Started",
              "type": "separator",
            },
            "--- my_new_separator": {
              "title": "Advanced",
              "type": "separator",
            },
            "404-500": "404/500 Custom Error Pages",
            "advanced": {
              "title": "Advanced",
            },
            "arguments": {
              "title": "Arguments",
            },
            "callout": "Callout",
            "change-log": {
              "theme": {
                "sidebar": false,
              },
              "title": "Change Log",
            },
            "code-block-without-language": "Code Block without Language",
            "conditional-fetching": "Conditional Data Fetching",
            "custom-header-ids": "Custom Header IDs",
            "data-fetching": {
              "title": "Data Fetching",
            },
            "error-handling": {
              "display": "hidden",
              "title": "Error Handling",
            },
            "getting-started": {
              "title": "Getting Started",
            },
            "github_link": {
              "href": "https://github.com/shuding/nextra",
              "newWindow": true,
              "title": "GitHub 🐙 →",
            },
            "global-configuration": {
              "title": "Global Configuration",
            },
            "middleware": {
              "title": "Middleware",
            },
            "mutation": {
              "title": "Mutation",
            },
            "options": {
              "title": "Options",
            },
            "pagination": {
              "title": "Pagination",
            },
            "prefetching": {
              "title": "Prefetching",
            },
            "raw-layout": {
              "theme": {
                "layout": "raw",
              },
              "title": "Raw Layout",
            },
            "revalidation": "Auto Revalidation",
            "suspense": {
              "title": "Suspense",
            },
            "typescript": "TypeScript :)",
            "understanding": "Understanding",
            "with-nextjs": "Next.js SSG and SSR",
            "wrap-toc-items": "Wrap Table of Content Items",
          },
          "kind": "Meta",
          "locale": "en-US",
        },
        {
          "children": [
            {
              "data": {
                "*": {
                  "theme": {
                    "footer": false,
                  },
                },
                "--- yoo": {
                  "title": "Do Not Use",
                  "type": "separator",
                },
                "cache": "Cache",
                "code-highlighting": "Code Highlighting",
                "dynamic-markdown-import": "Dynamic Markdown Import",
                "file-name.with.DOTS": "Filenames with Dots",
                "images": "Images",
                "markdown-import": "Markdown Import",
                "more": "More: A Super Super Super Super Long Directory",
                "performance": "Performance",
                "react-native": "React Native",
                "scrollbar-x": "Scrollbar X",
              },
              "kind": "Meta",
              "locale": "en-US",
            },
            {
              "kind": "MdxPage",
              "locale": "en-US",
              "name": "cache",
              "route": "/docs/advanced/cache",
            },
            {
              "kind": "MdxPage",
              "locale": "en-US",
              "name": "code-highlighting",
              "route": "/docs/advanced/code-highlighting",
            },
            {
              "kind": "MdxPage",
              "locale": "en-US",
              "name": "dynamic-markdown-import",
              "route": "/docs/advanced/dynamic-markdown-import",
            },
            {
              "kind": "MdxPage",
              "locale": "en-US",
              "name": "file-name.with.DOTS",
              "route": "/docs/advanced/file-name.with.DOTS",
            },
            {
              "kind": "MdxPage",
              "locale": "en-US",
              "name": "images",
              "route": "/docs/advanced/images",
            },
            {
              "kind": "MdxPage",
              "locale": "en-US",
              "name": "markdown-import",
              "route": "/docs/advanced/markdown-import",
            },
            {
              "children": [
                {
                  "kind": "MdxPage",
                  "locale": "en-US",
                  "name": "loooooooooooooooooooong-title",
                  "route": "/docs/advanced/more/loooooooooooooooooooong-title",
                },
                {
                  "children": [
                    {
                      "kind": "MdxPage",
                      "locale": "en-US",
                      "name": "one",
                      "route": "/docs/advanced/more/tree/one",
                    },
                    {
                      "kind": "MdxPage",
                      "locale": "en-US",
                      "name": "three",
                      "route": "/docs/advanced/more/tree/three",
                    },
                    {
                      "kind": "MdxPage",
                      "locale": "en-US",
                      "name": "two",
                      "route": "/docs/advanced/more/tree/two",
                    },
                    {
                      "data": {
                        "one": "One",
                        "three": "Three",
                        "two": "Two",
                      },
                      "kind": "Meta",
                      "locale": "en-US",
                    },
                  ],
                  "kind": "Folder",
                  "name": "tree",
                  "route": "/docs/advanced/more/tree",
                },
                {
                  "data": {
                    "loooooooooooooooooooong-title": "Loooooooooooooooooooong Title",
                  },
                  "kind": "Meta",
                  "locale": "en-US",
                },
              ],
              "kind": "Folder",
              "name": "more",
              "route": "/docs/advanced/more",
            },
            {
              "kind": "MdxPage",
              "locale": "en-US",
              "name": "performance",
              "route": "/docs/advanced/performance",
            },
            {
              "kind": "MdxPage",
              "locale": "en-US",
              "name": "react-native",
              "route": "/docs/advanced/react-native",
            },
            {
              "kind": "MdxPage",
              "locale": "en-US",
              "name": "scrollbar-x",
              "route": "/docs/advanced/scrollbar-x",
            },
          ],
          "kind": "Folder",
          "name": "advanced",
          "route": "/docs/advanced",
        },
        {
          "kind": "MdxPage",
          "locale": "en-US",
          "name": "advanced",
          "route": "/docs/advanced",
        },
        {
          "kind": "MdxPage",
          "locale": "en-US",
          "name": "arguments",
          "route": "/docs/arguments",
        },
        {
          "kind": "MdxPage",
          "locale": "en-US",
          "name": "callout",
          "route": "/docs/callout",
        },
        {
          "kind": "MdxPage",
          "locale": "en-US",
          "name": "change-log",
          "route": "/docs/change-log",
        },
        {
          "kind": "MdxPage",
          "locale": "en-US",
          "name": "code-block-without-language",
          "route": "/docs/code-block-without-language",
        },
        {
          "kind": "MdxPage",
          "locale": "en-US",
          "name": "conditional-fetching",
          "route": "/docs/conditional-fetching",
        },
        {
          "kind": "MdxPage",
          "locale": "en-US",
          "name": "custom-header-ids",
          "route": "/docs/custom-header-ids",
        },
        {
          "kind": "MdxPage",
          "locale": "en-US",
          "name": "data-fetching",
          "route": "/docs/data-fetching",
        },
        {
          "kind": "MdxPage",
          "locale": "en-US",
          "name": "error-handling",
          "route": "/docs/error-handling",
        },
        {
          "kind": "MdxPage",
          "locale": "en-US",
          "name": "getting-started",
          "route": "/docs/getting-started",
        },
        {
          "kind": "MdxPage",
          "locale": "en-US",
          "name": "global-configuration",
          "route": "/docs/global-configuration",
        },
        {
          "kind": "MdxPage",
          "locale": "en-US",
          "name": "middleware",
          "route": "/docs/middleware",
        },
        {
          "kind": "MdxPage",
          "locale": "en-US",
          "name": "mutation",
          "route": "/docs/mutation",
        },
        {
          "kind": "MdxPage",
          "locale": "en-US",
          "name": "options",
          "route": "/docs/options",
        },
        {
          "kind": "MdxPage",
          "locale": "en-US",
          "name": "pagination",
          "route": "/docs/pagination",
        },
        {
          "kind": "MdxPage",
          "locale": "en-US",
          "name": "prefetching",
          "route": "/docs/prefetching",
        },
        {
          "kind": "MdxPage",
          "locale": "en-US",
          "name": "raw-layout",
          "route": "/docs/raw-layout",
        },
        {
          "kind": "MdxPage",
          "locale": "en-US",
          "name": "revalidation",
          "route": "/docs/revalidation",
        },
        {
          "kind": "MdxPage",
          "locale": "en-US",
          "name": "suspense",
          "route": "/docs/suspense",
        },
        {
          "kind": "MdxPage",
          "locale": "en-US",
          "name": "typescript",
          "route": "/docs/typescript",
        },
        {
          "kind": "MdxPage",
          "locale": "en-US",
          "name": "understanding",
          "route": "/docs/understanding",
        },
        {
          "kind": "MdxPage",
          "locale": "en-US",
          "name": "with-nextjs",
          "route": "/docs/with-nextjs",
        },
        {
          "kind": "MdxPage",
          "locale": "en-US",
          "name": "wrap-toc-items",
          "route": "/docs/wrap-toc-items",
        },
      ],
      "kind": "Folder",
      "name": "docs",
      "route": "/docs",
    },
    {
      "children": [
        {
          "data": {
            "auth": "Authentication",
            "basic": "Basic Usage",
            "error-handling": {
              "title": "Error Handling",
            },
            "full": {
              "theme": {
                "layout": "raw",
              },
              "title": "Full",
            },
            "infinite-loading": {
              "title": "Infinite Loading",
            },
            "ssr": "Next.js SSR",
          },
          "kind": "Meta",
          "locale": "en-US",
        },
        {
          "frontMatter": {
            "full": true,
            "title": "Authentication",
          },
          "kind": "MdxPage",
          "locale": "en-US",
          "name": "auth",
          "route": "/examples/auth",
        },
        {
          "frontMatter": {
            "full": true,
            "title": "Basic Usage",
          },
          "kind": "MdxPage",
          "locale": "en-US",
          "name": "basic",
          "route": "/examples/basic",
        },
        {
          "frontMatter": {
            "full": true,
            "title": "Error Handling",
          },
          "kind": "MdxPage",
          "locale": "en-US",
          "name": "error-handling",
          "route": "/examples/error-handling",
        },
        {
          "kind": "MdxPage",
          "locale": "en-US",
          "name": "full",
          "route": "/examples/full",
        },
        {
          "frontMatter": {
            "full": true,
            "title": "Infinite Loading",
          },
          "kind": "MdxPage",
          "locale": "en-US",
          "name": "infinite-loading",
          "route": "/examples/infinite-loading",
        },
        {
          "frontMatter": {
            "full": true,
            "title": "Next.js SSR",
          },
          "kind": "MdxPage",
          "locale": "en-US",
          "name": "ssr",
          "route": "/examples/ssr",
        },
      ],
      "kind": "Folder",
      "name": "examples",
      "route": "/examples",
    },
    {
      "frontMatter": {
        "searchable": false,
        "title": "React Hooks for Data Fetching",
      },
      "kind": "MdxPage",
      "locale": "en-US",
      "name": "index",
      "route": "/",
    },
    {
      "frontMatter": {
        "mdxOptions": {
          "format": "md",
        },
      },
      "kind": "MdxPage",
      "locale": "en-US",
      "name": "test",
      "route": "/test",
    },
  ],
  "/docs/data-fetching",
]
`;

exports[`Page Process > pageMap ru 1`] = `
[
  [
    {
      "data": {
        "blog": {
          "title": "Блог",
          "type": "page",
        },
        "docs": {
          "title": "Документация",
          "type": "page",
        },
        "examples": {
          "title": "Примеры",
          "type": "page",
        },
        "index": {
          "display": "hidden",
          "title": "Введение",
          "type": "page",
        },
      },
      "kind": "Meta",
      "locale": "ru",
    },
    {
      "children": [
        {
          "data": {
            "a-page": {
              "display": "hidden",
              "theme": {
                "layout": "raw",
              },
              "title": "A Page",
              "type": "page",
            },
            "acknowledgement": "🧩 Acknowledgement",
            "changelog": "Changelog",
            "team": "👥 Team",
          },
          "kind": "Meta",
          "locale": "en-US",
        },
        {
          "kind": "MdxPage",
          "locale": "en-US",
          "name": "a-page",
          "route": "/about/a-page",
        },
        {
          "kind": "MdxPage",
          "locale": "en-US",
          "name": "acknowledgement",
          "route": "/about/acknowledgement",
        },
        {
          "kind": "MdxPage",
          "locale": "en-US",
          "name": "changelog",
          "route": "/about/changelog",
        },
        {
          "kind": "MdxPage",
          "locale": "en-US",
          "name": "team",
          "route": "/about/team",
        },
      ],
      "kind": "Folder",
      "name": "about",
      "route": "/about",
    },
    {
      "children": [
        {
          "data": {
            "swr-v1": "Представляем SWR 1.0",
          },
          "kind": "Meta",
          "locale": "ru",
        },
        {
          "frontMatter": {
            "description": "Почти 2 года назад мы сделали SWR — крошечную React библиотеку с открытым исходным кодом для выборки данных, которую люди полюбили. Сегодня мы приближаемся к еще одной вехе: версии 1.0 SWR!",
            "image": "https://assets.vercel.com/image/upload/v1630059453/swr/v1.png",
          },
          "kind": "MdxPage",
          "locale": "ru",
          "name": "swr-v1",
          "route": "/blog/swr-v1",
        },
      ],
      "kind": "Folder",
      "name": "blog",
      "route": "/blog",
    },
    {
      "children": [
        {
          "data": {
            "advanced": "Продвинутые",
            "arguments": "Аргументы",
            "change-log": "Журнал изменений",
            "conditional-fetching": "Условная выборка данных",
            "data-fetching": "Выборка данных",
            "error-handling": "Обработка ошибок",
            "getting-started": "Начало работы",
            "global-configuration": "Глобальная конфигурация",
            "middleware": "Промежуточное ПО (Middleware)",
            "mutation": "Мутация",
            "options": "Опции",
            "pagination": "Пагинация",
            "prefetching": "Пред-выборка",
            "revalidation": "Авто-ревалидация",
            "suspense": "Задержка (Suspense)",
            "typescript": "Typescript",
            "understanding": "Understanding",
            "with-nextjs": "Next.js SSG и SSR",
            "wrap-toc-items": "Обернуть таблицу содержимого элементов",
          },
          "kind": "Meta",
          "locale": "ru",
        },
        {
          "children": [
            {
              "data": {
                "cache": "Кеш",
                "file-name.with.DOTS": "Имя файла может содержать точки",
                "performance": "Производительность",
                "react-native": "React Native",
              },
              "kind": "Meta",
              "locale": "ru",
            },
            {
              "kind": "MdxPage",
              "locale": "ru",
              "name": "cache",
              "route": "/docs/advanced/cache",
            },
            {
              "kind": "MdxPage",
              "locale": "ru",
              "name": "file-name.with.DOTS",
              "route": "/docs/advanced/file-name.with.DOTS",
            },
            {
              "children": [
                {
                  "children": [
                    {
                      "kind": "MdxPage",
                      "locale": "en-US",
                      "name": "one",
                      "route": "/docs/advanced/more/tree/one",
                    },
                    {
                      "kind": "MdxPage",
                      "locale": "en-US",
                      "name": "three",
                      "route": "/docs/advanced/more/tree/three",
                    },
                    {
                      "kind": "MdxPage",
                      "locale": "en-US",
                      "name": "two",
                      "route": "/docs/advanced/more/tree/two",
                    },
                    {
                      "data": {
                        "one": "One",
                        "three": "Three",
                        "two": "Two",
                      },
                      "kind": "Meta",
                      "locale": "en-US",
                    },
                  ],
                  "kind": "Folder",
                  "name": "tree",
                  "route": "/docs/advanced/more/tree",
                },
                {
                  "kind": "MdxPage",
                  "locale": "en-US",
                  "name": "loooooooooooooooooooong-title",
                  "route": "/docs/advanced/more/loooooooooooooooooooong-title",
                },
                {
                  "data": {
                    "loooooooooooooooooooong-title": "Loooooooooooooooooooong Title",
                  },
                  "kind": "Meta",
                  "locale": "en-US",
                },
              ],
              "kind": "Folder",
              "name": "more",
              "route": "/docs/advanced/more",
            },
            {
              "kind": "MdxPage",
              "locale": "ru",
              "name": "performance",
              "route": "/docs/advanced/performance",
            },
            {
              "kind": "MdxPage",
              "locale": "ru",
              "name": "react-native",
              "route": "/docs/advanced/react-native",
            },
            {
              "kind": "MdxPage",
              "locale": "en-US",
              "name": "code-highlighting",
              "route": "/docs/advanced/code-highlighting",
            },
            {
              "kind": "MdxPage",
              "locale": "en-US",
              "name": "dynamic-markdown-import",
              "route": "/docs/advanced/dynamic-markdown-import",
            },
            {
              "kind": "MdxPage",
              "locale": "en-US",
              "name": "images",
              "route": "/docs/advanced/images",
            },
            {
              "kind": "MdxPage",
              "locale": "en-US",
              "name": "markdown-import",
              "route": "/docs/advanced/markdown-import",
            },
            {
              "kind": "MdxPage",
              "locale": "en-US",
              "name": "scrollbar-x",
              "route": "/docs/advanced/scrollbar-x",
            },
          ],
          "kind": "Folder",
          "name": "advanced",
          "route": "/docs/advanced",
        },
        {
          "kind": "MdxPage",
          "locale": "ru",
          "name": "arguments",
          "route": "/docs/arguments",
        },
        {
          "kind": "MdxPage",
          "locale": "ru",
          "name": "change-log",
          "route": "/docs/change-log",
        },
        {
          "kind": "MdxPage",
          "locale": "ru",
          "name": "conditional-fetching",
          "route": "/docs/conditional-fetching",
        },
        {
          "kind": "MdxPage",
          "locale": "ru",
          "name": "data-fetching",
          "route": "/docs/data-fetching",
        },
        {
          "kind": "MdxPage",
          "locale": "ru",
          "name": "error-handling",
          "route": "/docs/error-handling",
        },
        {
          "kind": "MdxPage",
          "locale": "ru",
          "name": "getting-started",
          "route": "/docs/getting-started",
        },
        {
          "kind": "MdxPage",
          "locale": "ru",
          "name": "global-configuration",
          "route": "/docs/global-configuration",
        },
        {
          "kind": "MdxPage",
          "locale": "ru",
          "name": "middleware",
          "route": "/docs/middleware",
        },
        {
          "kind": "MdxPage",
          "locale": "ru",
          "name": "mutation",
          "route": "/docs/mutation",
        },
        {
          "kind": "MdxPage",
          "locale": "ru",
          "name": "options",
          "route": "/docs/options",
        },
        {
          "kind": "MdxPage",
          "locale": "ru",
          "name": "pagination",
          "route": "/docs/pagination",
        },
        {
          "kind": "MdxPage",
          "locale": "ru",
          "name": "prefetching",
          "route": "/docs/prefetching",
        },
        {
          "kind": "MdxPage",
          "locale": "ru",
          "name": "revalidation",
          "route": "/docs/revalidation",
        },
        {
          "kind": "MdxPage",
          "locale": "ru",
          "name": "suspense",
          "route": "/docs/suspense",
        },
        {
          "kind": "MdxPage",
          "locale": "ru",
          "name": "understanding",
          "route": "/docs/understanding",
        },
        {
          "kind": "MdxPage",
          "locale": "ru",
          "name": "with-nextjs",
          "route": "/docs/with-nextjs",
        },
        {
          "kind": "MdxPage",
          "locale": "ru",
          "name": "wrap-toc-items",
          "route": "/docs/wrap-toc-items",
        },
        {
          "kind": "MdxPage",
          "locale": "en-US",
          "name": "404-500",
          "route": "/docs/404-500",
        },
        {
          "kind": "MdxPage",
          "locale": "en-US",
          "name": "advanced",
          "route": "/docs/advanced",
        },
        {
          "kind": "MdxPage",
          "locale": "en-US",
          "name": "callout",
          "route": "/docs/callout",
        },
        {
          "kind": "MdxPage",
          "locale": "en-US",
          "name": "code-block-without-language",
          "route": "/docs/code-block-without-language",
        },
        {
          "kind": "MdxPage",
          "locale": "en-US",
          "name": "custom-header-ids",
          "route": "/docs/custom-header-ids",
        },
        {
          "kind": "MdxPage",
          "locale": "en-US",
          "name": "raw-layout",
          "route": "/docs/raw-layout",
        },
        {
          "kind": "MdxPage",
          "locale": "en-US",
          "name": "typescript",
          "route": "/docs/typescript",
        },
      ],
      "kind": "Folder",
      "name": "docs",
      "route": "/docs",
    },
    {
      "children": [
        {
          "data": {
            "auth": "Аутентификация",
            "basic": "Основное использование",
            "error-handling": "Обработка ошибок",
            "infinite-loading": "Бесконечная загрузка",
            "ssr": "Next.js SSR",
          },
          "kind": "Meta",
          "locale": "ru",
        },
        {
          "frontMatter": {
            "full": true,
            "title": "Аутентификация",
          },
          "kind": "MdxPage",
          "locale": "ru",
          "name": "auth",
          "route": "/examples/auth",
        },
        {
          "frontMatter": {
            "full": true,
            "title": "Основное использование",
          },
          "kind": "MdxPage",
          "locale": "ru",
          "name": "basic",
          "route": "/examples/basic",
        },
        {
          "frontMatter": {
            "full": true,
            "title": "Обработка ошибок",
          },
          "kind": "MdxPage",
          "locale": "ru",
          "name": "error-handling",
          "route": "/examples/error-handling",
        },
        {
          "frontMatter": {
            "full": true,
            "title": "Бесконечная загрузка",
          },
          "kind": "MdxPage",
          "locale": "ru",
          "name": "infinite-loading",
          "route": "/examples/infinite-loading",
        },
        {
          "frontMatter": {
            "full": true,
            "title": "Next.js SSR",
          },
          "kind": "MdxPage",
          "locale": "ru",
          "name": "ssr",
          "route": "/examples/ssr",
        },
        {
          "kind": "MdxPage",
          "locale": "en-US",
          "name": "full",
          "route": "/examples/full",
        },
      ],
      "kind": "Folder",
      "name": "examples",
      "route": "/examples",
    },
    {
      "frontMatter": {
        "title": "React хуки для получения данных",
      },
      "kind": "MdxPage",
      "locale": "ru",
      "name": "index",
      "route": "/",
    },
    {
      "kind": "MdxPage",
      "name": "404",
      "route": "/404",
    },
    {
      "kind": "MdxPage",
      "name": "500",
      "route": "/500",
    },
    {
      "frontMatter": {
        "searchable": false,
      },
      "kind": "MdxPage",
      "locale": "en-US",
      "name": "blog",
      "route": "/blog",
    },
    {
      "frontMatter": {
        "mdxOptions": {
          "format": "md",
        },
      },
      "kind": "MdxPage",
      "locale": "en-US",
      "name": "test",
      "route": "/test",
    },
  ],
  "/docs/data-fetching",
]
`;
